# LinuxObjectIntercommunicationProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  sy40
inc/: general.h  portique.h  quai.h  vehicule.h
src/: main.c  portique.c  quai.c  vehicule.c
